<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menuLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#512DA8"
    tools:context=".MenuActivity">


    <RelativeLayout
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible">

        <TextView
            android:id="@+id/gameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="50sp"
            app:autoSizeTextType="uniform" />

        <Button
            android:id="@+id/menubtn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/menubtn5"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:backgroundTint="#311B92"
            android:text="@string/btnQuickPlay"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/menubtn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gameTitle"
            android:layout_centerHorizontal="true"
            android:backgroundTint="#311B92"
            android:text="@string/btnCustom"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/menubtn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/menubtn2"
            android:layout_centerHorizontal="true"
            android:backgroundTint="#311B92"
            android:text="@string/btnScoreboard"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/menubtn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/menubtn3"
            android:layout_centerHorizontal="true"
            android:backgroundTint="#311B92"
            android:text="@string/btnCredits"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/menubtn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/menubtn4"
            android:layout_centerHorizontal="true"
            android:backgroundTint="#311B92"
            android:text="@string/btnQuit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />


    </RelativeLayout>


</RelativeLayout>