<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#512DA8"
        app:cardCornerRadius="12dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:background="#512DA8"
            android:padding="10dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/scoreBoardTitle"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/timed"
                android:layout_marginTop="20dp"
                android:text="@string/scoreTimed"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/highestScoreTimed"
                android:layout_marginTop="0dp"
                android:text="@string/currentGameScore"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/untimed"
                android:layout_marginTop="10dp"
                android:text="@string/scoreUntimed"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/highestScoreUntimed"
                android:layout_marginTop="0dp"
                android:text="@string/currentGameScore"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#311B92"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:id="@+id/btnBack"
                android:text="@string/btnBack"
                />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>