<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/gameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#512DA8">

    <TextView
        android:id="@+id/timerView"
        android:layout_width="105dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:text="@string/timerDigits"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:autoSizeTextType="uniform"
        android:lines="1"/>


    <RelativeLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible">

        <TextView
            android:id="@+id/gameScore"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:scaleX="1.7"
            android:scaleY="1.7"
            android:text="@string/currentGameScore"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:autoSizeTextType="uniform" />

        <Button
            android:id="@+id/hit1"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_below="@id/gameScore"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/hit2"
            android:backgroundTint="#311B92"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            android:text="@string/defaultState"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="11sp" />


        <Button
            android:id="@+id/hit2"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_below="@id/gameScore"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:backgroundTint="#311B92"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            android:text="@string/defaultState"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <Button
            android:id="@+id/hit3"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_below="@id/gameScore"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/hit2"
            android:backgroundTint="#311B92"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            android:text="@string/defaultState"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <Button
            android:id="@+id/hit4"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_below="@id/hit2"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/hit5"
            android:backgroundTint="#311B92"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            android:text="@string/defaultState"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <Button
            android:id="@+id/hit5"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_below="@id/hit2"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@id/centerGuide"
            android:backgroundTint="#311B92"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            android:text="@string/defaultState"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <Button
            android:id="@+id/hit6"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_below="@id/hit2"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/centerGuide"
            android:backgroundTint="#311B92"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            android:text="@string/defaultState"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <Button
            android:id="@+id/hit7"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_below="@id/hit2"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/hit6"
            android:backgroundTint="#311B92"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            android:text="@string/defaultState"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <Button
            android:id="@+id/hit8"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_below="@id/hit4"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/hit9"
            android:backgroundTint="#311B92"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            android:text="@string/defaultState"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <Button
            android:id="@+id/hit9"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_below="@id/hit4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:backgroundTint="#311B92"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            android:text="@string/defaultState"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <Button
            android:id="@+id/hit10"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_below="@id/hit4"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/hit9"
            android:backgroundTint="#311B92"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            android:text="@string/defaultState"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/centerGuide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/hit2"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />

    </RelativeLayout>


</RelativeLayout>